--- a/contact.html
+++ b/contact.html
@@ -302,7 +302,7 @@
         <i class="fas fa-arrow-up" aria-hidden="true"></i>
     </button>
 
-    <script src="script.js"></script>
+    <script src="first.js"></script>
     <script>
         // Ensure copyright year is updated
         document.getElementById('current-year').textContent = new Date().getFullYear();
