--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>About Our School</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Established in 1985, R.N. Tagore Higher Secondary School has been a beacon of quality education in the region. Our commitment to academic excellence and character development has shaped generations of successful individuals.</p>
+                        <p>Established in 26th May 1986, R.N. Tagore Higher Secondary School has been a beacon of quality education in the region. Our commitment to academic excellence and character development has shaped generations of successful individuals.</p>
                         <p>We believe in nurturing curious minds, fostering creativity, and instilling values that prepare students for the challenges of tomorrow. Our state-of-the-art facilities and experienced faculty create an environment conducive to learning and growth.</p>
                         <p>Our mission is to provide affordable, quality education that empowers students to become responsible global citizens while preserving their cultural roots.</p>
                     </div>
